--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,5 @@ spring.thymeleaf.cache=false
 # Database
 spring.datasource.url=jdbc:postgresql://localhost:5432/guest
 spring.datasource.username=postgres
-spring.datasource.password=as1453
+spring.datasource.password=******
 spring.jpa.hibernate.ddl-auto=create-drop
